# xhtml2epub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
.hooks/: html-tidy.conf  html-tidy.sh
src/xhtml2epub/: __init__.py  __main__.py  book.py  html.py  version.py
src/xhtml2epub/template/: index.xhtml  stylesheet.css
tests/: conftest.py  test_book.py  test_cli.py
