[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Jim Wisniewski <wisnij@gmail.com>"]
description = "A simple EPUB authoring tool"
license = "GPL-3.0-or-later"
name = "xhtml2epub"
readme = "README.md"
version = "2.0.0"

[tool.poetry.dependencies]
EbookLib = "^0.17.1"
lxml = "^4.3.2"
python = "^3.8"

[tool.poetry.scripts]
xhtml2epub = "xhtml2epub.__main__:main"
