[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Jim Wisniewski <wisnij@gmail.com>"]
description = "A simple EPUB authoring tool"
license = "GPL-3.0-or-later"
name = "xhtml2epub"
readme = "README.md"
version = "2.0.1"

[tool.poetry.dependencies]
EbookLib = "^0.19.0"
lxml = "^5.4.0"
python = "^3.8"

[tool.poetry.scripts]
xhtml2epub = "xhtml2epub.__main__:main"
