[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core (~=2.0)"]

[dependency-groups]
test = [
  "pytest (~=8.0)",
]

[project]
authors = [
  {name = "Jim Wisniewski", email = "wisnij@gmail.com"},
]
dependencies = [
  "EbookLib (==0.19.0)",
  "lxml (~=5.4)",
]
description = "A simple EPUB authoring tool"
license = "GPL-3.0-or-later"
name = "xhtml2epub"
readme = "README.md"
requires-python = ">=3.8"
version = "2.1.0"

[project.scripts]
xhtml2epub = "xhtml2epub.__main__:main"

[project.urls]
repository = "https://github.com/wisnij/xhtml2epub"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]

[tool.ruff]
fix = true

[tool.ruff.lint]
# I=isort, UP=pyupgrade
extend-select = ["I", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
