[metadata]
name = xhtml2epub
version = attr: xhtml2epub.version.__version__
author = Jim Wisniewski
author_email = wisnij@gmail.com
description = A simple EPUB authoring tool
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    EbookLib >=0.17.1
    lxml >=4.3.2

[options.entry_points]
console_scripts =
    xhtml2epub = xhtml2epub.__main__:main

[options.packages.find]
where = src
